<resources>
    <string name="app_name">PlanItNow</string>
    <string name="title_home">Mis planes</string>
    <string name="title_search">Descubrir</string>
    <string name="title_friends">Amigos</string>
    <string name="view_plan">Ver Plan</string>
    <string name="create_plan">Crear Plan</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Iniciar Sesión</string>
    <string name="login_error">Tu nombre de usuario o contraseña son incorrectos</string>
    <string name="maxAttempts">Maximo Alcanzado</string>
    <string name="loginmaxAttempts">Máximo Alcanzado</string>
    <string name="loginMaxAttemptsMessage">"Has alcanzado el número máximo de intentos para el login. Por favor inténtalo más tarde. "</string>
    <string name="accept">Aceptar</string>
    <string name="from">De</string>
    <string name="to">a</string>
    <string name="theDay">El día</string>
    <string name="success_creating_plan">Tu plan se ha creado ;)</string>
    <string name="error_creating_plan">¡Vaya! Ha habido un error creando tu plan.</string>
    <string name="error_deleting_plan">¡Vaya! Ha habido un error eliminando tu plan.</string>
    <string name="success_deleting_plan">Se ha eliminado el plan: </string>
    <string name="created_by">Creado por</string>
    <string name="add_friend">Añadir Amigo</string>
    <string name="notifications">Notificaciones</string>
    <string name="send">Enviar</string>
    <string name="add_friend_hint">NombreUsuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_friend_request">Se ha enviado correctamente tu solicitud</string>
    <string name="error_friend_request">El usuario no existe o ya has enviado una solicitud</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="friend_request">Solicitud de Amistad</string>
    <string name="sent_friend_request">te ha enviado una solicitud de amistad</string>
    <string name="success_operation">Acción ejecutada con éxito</string>
    <string name="error_operation">Ha habido un error. Prueba más tarde.</string>
    <string name="participate">Apuntarse</string>
    <string name="register_activity_title">Registrarse</string>
    <string name="register_help">Para registrarte rellena todos los datos a continuación y pulsa el botón de registrarse</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellidos</string>
    <string name="email">Email</string>
    <string name="birth_date">Fecha de Nacimiento</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="name_input">Introduce tu Nombre</string>
    <string name="last_name_input">Introduce tus apellidos</string>
    <string name="email_input">Introduce tu Email</string>
    <string name="username_input">Introduce tu Nombre de Usuario</string>
    <string name="register">Registrarse</string>
    <string name="cancel">Cancelar</string>
    <string name="cancelar">cancelar</string>
    <string name="registration_text">¿No tienes cuenta? Regístrate</string>
    <string name="edit_profile_help">Todo lo que modifiques en este formulario será modificado en tu perfil. Una vez finalices la edición haz click en el botón Modificar Perfil</string>
    <string name="nick">Nombre Publico</string>
    <string name="biography">Biografía</string>
    <string name="write_biography">¡Escríbenos algo sobre ti!</string>
    <string name="edit_profile">Modificar Perfil</string>
    <string name="residence">Residencia</string>
    <string name="residence_help">¿Dónde sueles estar?</string>
    <string name="public_username_help">Pon un nombre a tu estilo</string>
    <string name="profile_picture_image_link">Enlace a tu foto de perfil</string>
    <string name="image_url_help">Tiene que ser un enlace directo a una imágen</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="logout_action">Se ha cerrado sesión. Surtirá efecto cuando reinicies la app.</string>
    <string name="success_edit_profile">Se ha editado tu perfil correctamente.</string>
    <string name="is_public">¿Es público?</string>
    <string name="day_and_hour">Hora y día</string>
    <string name="init_hour">Hora Inicio</string>
    <string name="end_hour">Hora Fin</string>
    <string name="add_title">Añade un título que haga tu plan fácilmente reconocible</string>
    <string name="plan_description_hint">¡Cuenta más sobre tu plan!</string>
    <string name="location_text">¿Dónde?</string>
    <string name="image_link_text">Añade el enlace a una imágen y la mostraremos en el plan</string>
    <string name="max_participants_int">Participantes Máximos (def. 5)</string>
    <string name="my_diary">Mi diario</string>
    <string name="delete_plan">Borrar Plan</string>
    <string name="sure_delete_plan">¿Estás seguro de que quieres eliminar el plan?</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="join_plan">Apuntarse</string>
    <string name="leave_plan">Desapuntarse</string>
    <string name="participants">Participantes</string>
    <string name="edit_plan">Editar Plan</string>
    <string name="edit">Editar</string>
    <string name="success_editing_plan">Se ha editado el plan correctamente.</string>

</resources>