<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.planitnow.usecases.homefeed.HomeFragment"
        android:label="@string/title_home" />

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.planitnow.ui.dashboard.DashboardFragment"
        android:label="@string/title_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_friends"
        android:name="com.planitnow.usecases.viewfriends.FriendsFragment"
        android:label="@string/title_friends"
        tools:layout="@layout/fragment_friends" />
</navigation>